Adding robust exception handling